--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,8 +10,15 @@ page {
   width: 100%;
   box-sizing: border-box;
 }
-.none{
-  display: none
+.btns{
+  display: flex;
+  justify-content: space-between;
+  gap: 32rpx;
+  width: 100%;
+}
+.external-class {
+  height: 300rpx;
+  flex: 1;
 }
 .image-btns{
   width: 100%;
