新增历史记录链接

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,3 +26,10 @@ page {
   padding-top: 32rpx;
   /* gap: 16rpx; */
 }
+.link-example{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 96rpx;
+  background-color: var(--bg-color-demo);
+}
