--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,12 +2,12 @@
   <t-toast id="t-toast" />
   <t-notice-bar visible="{{true}}" prefixIcon="{{false}}" theme="success">
     <view slot="content">
-      <rich-text nodes="{{config.notice}}"/>
+      <rich-text nodes="{{config.notice}}" />
     </view>
   </t-notice-bar>
   <view class="d-form-item flex jsb">
     <view class="d-label">自动粘贴</view>
-    <t-switch slot="note" value="{{autoPaste}}" bind:change="onAutoPaste"/>
+    <t-switch slot="note" value="{{autoPaste}}" bind:change="onAutoPaste" />
   </view>
   <view class="d-form-item">
     <view class="d-label">视频链接</view>
@@ -19,5 +19,8 @@
       <t-button theme="primary" block size="large" t-class="group-btn" bind:tap="submit">一键解析</t-button>
     </view>
   </view>
-  
+  <view class="link-example">
+    <t-link size="small" theme="primary" content="解析历史记录" underline suffixIcon="jump" hover navigatorProps="{{ {url:'/pages/user/parse/list/list'} }}"/>
+  </view>
+
 </view>
