--- a/app.wxss
+++ b/app.wxss
@@ -22,6 +22,9 @@ page{
 .jsb{
   justify-content: space-between;
 }
+.pd0{
+  padding: 0;
+}
 .d-form-item {
   --td-input-align-items:start;
   background-color: var(--td-input-bg-color, var(--td-bg-color-container, var(--td-font-white-1, #ffffff)));
