--- a/pages/tools/transcode/submit/submit.wxml
+++ b/pages/tools/transcode/submit/submit.wxml
@@ -6,7 +6,7 @@
   </view>
   <view class="d-form-item">
     <view class="d-label">视频地址*</view>
-    <t-textarea t-class="external-class" placeholder="请输入视频地址（m3u8转mp4）" maxlength="1000" disableDefaultPadding="{{true}}" indicator confirm-type="done" bindchange="onUrlInputChange" value="{{url}}"/>
+    <t-textarea t-class="external-class" placeholder="请输入视频地址（支持最大视频时长30分钟）" maxlength="1000" disableDefaultPadding="{{true}}" indicator confirm-type="done" bindchange="onUrlInputChange" value="{{url}}"/>
   </view>
   <view class="d-form-item">
     <view class="d-label">原格式</view>
