--- a/pages/user/parse/info/info.wxml
+++ b/pages/user/parse/info/info.wxml
@@ -1,3 +1,6 @@
+<t-toast id="t-toast">
+<text slot="message">保存进度{{saveAllTask.doneTask}}/{{saveAllTask.totalTask}}</text>
+</t-toast>
 <view class="container">
   <view class="skeleton" wx:if="{{showSkeleton}}">
     <t-skeleton rowCol="{{skeleton}}" loading></t-skeleton>
@@ -20,6 +23,10 @@
     <view class="button-example">
       <t-button size="small" bind:tap="copyText" data-text="{{info.url}}" block>复制原链接</t-button>
       <t-button size="small" bind:tap="copyText" data-text="{{info.textOrigin||info.text}}" block>复制文案</t-button>
+    </view>
+    <view class="button-example">
+      <t-button size="small" bind:tap="saveVideoAll" block wx:if="{{info.video.length>0}}">下载全部视频（{{info.video.length}}）</t-button>
+      <t-button size="small" bind:tap="saveImageAll" block wx:if="{{info.images.length>0}}">下载全部图片（{{info.images.length}}）</t-button>
     </view>
 
     <view wx:if="{{info.video.length>0}}">
@@ -94,4 +101,5 @@
     </view>
     <t-image-viewer closeBtn="{{true}}" showIndex="{{true}}" initial-index="{{curIndex}}" visible="{{visible}}" images="{{imagesViewer}}" bind:close="closeImageViewer" />
   </view>
+  <t-back-top scroll-top="{{scrollTop}}" text="顶部" />
 </view>
