--- a/pages/user/parse/info/info.wxss
+++ b/pages/user/parse/info/info.wxss
@@ -8,7 +8,7 @@ page {
   height: 100%;
 }
 .button-example{
-  padding: 32rpx;
+  padding: 32rpx 32rpx 0;
   display: flex;
   justify-content: space-between;
   gap: 32rpx;
