--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,6 +5,7 @@
       <rich-text nodes="{{config.notice}}" />
     </view>
   </t-notice-bar>
+  <ad-custom unit-id="{{config.adBannerId}}" wx:if="{{config.adBannerStatus === 'true'}}"></ad-custom>
   <view class="d-form-item flex jsb">
     <view class="d-label">自动粘贴</view>
     <t-switch slot="note" value="{{autoPaste}}" bind:change="onAutoPaste" />
@@ -20,6 +21,6 @@
     </view>
   </view>
   <view class="link-example">
-    <t-link size="large" theme="primary" content="解析历史记录" underline suffixIcon="jump" hover navigatorProps="{{ {url:'/pages/user/parse/list/list'} }}"/>
+    <t-link size="large" theme="primary" content="解析历史记录" underline suffixIcon="jump" hover navigatorProps="{{ {url:'/pages/user/parse/list/list'} }}" />
   </view>
 </view>
