--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <view class="container">
   <t-toast id="t-toast" />
+  <t-dialog id="t-dialog" />
   <t-notice-bar visible="{{true}}" prefixIcon="{{false}}" theme="success">
     <view slot="content">
       <rich-text nodes="{{config.notice}}" />
