--- a/components/video-upload/video-upload.wxml
+++ b/components/video-upload/video-upload.wxml
@@ -3,5 +3,5 @@
   <view class="upload" bind:tap="onSelectFile" wx:if="{{!filepath}}">
     <t-icon t-class="icon" name="add" size="100rpx"></t-icon>
   </view>
-  <video src="{{filepath}}" controls style="width: 100%;" wx:else></video>
+  <video src="{{filepath}}" controls style="width: 100%;" show-fullscreen-btn="{{false}}" wx:else></video>
 </view>
