--- a/pages/tools/video-md5/info/info.wxml
+++ b/pages/tools/video-md5/info/info.wxml
@@ -1,4 +1,9 @@
 <view class="container">
+  <t-notice-bar visible="{{true}}" prefixIcon="{{false}}" content="重要：请及时下载，避免资源失效">
+    <view slot="prefix-icon">
+      <t-icon name="error-circle-filled"></t-icon>
+    </view>
+  </t-notice-bar>
   <t-pull-down-refresh value="{{enable}}" loadingTexts="{{['下拉刷新', '松手刷新', '正在刷新', '刷新完成']}}" bind:refresh="onRefresh" t-class="refresh">
     <!-- 包裹页面全部内容 -->
     <view class="box">
@@ -8,8 +13,7 @@
       <view wx:else>
         <video src="{{info.downloadUrl}}" style="width: 100%;" wx:if="{{info.stats == 2}}" />
         <t-cell title="{{info.name}}" note="创建于 {{info.createFromNow}}" hover />
-        <t-cell title="已处理时长" note="{{info.timeText}}" hover wx:if="{{info.stats==1}}">
-        </t-cell>
+        <t-cell title="已处理时长" note="{{info.timeText}}" hover wx:if="{{info.stats==1}}" />
         <t-cell title="文件大小" note="{{info.size}}" hover wx:if="{{info.stats == 2}}" bind:click="copyText">
           <view slot="description">
             {{allowDownload?"":"文件过大请复制到浏览器下载"}}
